[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/GUI/label_HP_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/GUI/exitButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://scenes/accessPanel/accessPanel.gd" type="Script" id=4]
[ext_resource path="res://assets/GUI/yesButton.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/yesButtonPressed.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/noButton.png" type="Texture" id=7]
[ext_resource path="res://assets/GUI/noButtonPressed.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/exitButton.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 120, 46 )

[node name="accessPanel" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="exit" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -246.0
margin_top = 89.0
margin_right = -181.0
margin_bottom = 154.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="CenterContainer" parent="."]
margin_right = 1264.0
margin_bottom = 1010.0

[node name="VBoxContainer" type="VSplitContainer" parent="panel"]
margin_top = 427.0
margin_right = 1264.0
margin_bottom = 583.0

[node name="Label" type="Label" parent="panel/VBoxContainer"]
margin_right = 1264.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Вы уверены что хотите спать?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="panel/VBoxContainer"]
margin_top = 91.0
margin_right = 1264.0
margin_bottom = 156.0

[node name="HSplitContainer" type="HSplitContainer" parent="panel/VBoxContainer/CenterContainer"]
margin_left = 561.0
margin_right = 703.0
margin_bottom = 65.0

[node name="yes" type="TextureButton" parent="panel/VBoxContainer/CenterContainer/HSplitContainer"]
margin_right = 65.0
margin_bottom = 65.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )

[node name="no" type="TextureButton" parent="panel/VBoxContainer/CenterContainer/HSplitContainer"]
margin_left = 77.0
margin_right = 142.0
margin_bottom = 65.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="panel/VBoxContainer/CenterContainer/HSplitContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="panel/VBoxContainer/CenterContainer/HSplitContainer/no" to="." method="_on_no_pressed"]
